--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@google/generative-ai": "^0.9.0",
 		"@nextui-org/button": "^2.0.31",
 		"@nextui-org/code": "^2.0.27",
 		"@nextui-org/input": "^2.1.21",
 		"@nextui-org/kbd": "^2.0.28",
 		"@nextui-org/link": "^2.0.29",
 		"@nextui-org/navbar": "^2.0.30",
+		"@nextui-org/react": "^2.3.6",
 		"@nextui-org/snippet": "^2.0.35",
 		"@nextui-org/switch": "^2.0.28",
 		"@nextui-org/system": "2.1.0",
@@ -32,6 +34,7 @@
 		"intl-messageformat": "^10.5.0",
 		"next": "14.2.1",
 		"next-themes": "^0.2.1",
+		"openai": "^4.40.0",
 		"postcss": "8.4.38",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
